--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ body {
 }
 
 h2{
-    margin-bottom: 40px;
     font-size: 32px;
     color: #252551;
     text-align: center; display: flex;
     justify-content: space-evenly;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+    font-weight: 900;
     
 }
 .contanier{
@@ -35,14 +35,18 @@ h2{
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     
 }
+.win{
+    font-weight: 800;
+    color: rgb(26, 206, 26);
+    font-size: 22px;
+}
+
 /* .GName{
     background-color: #008CBA;
     padding: 5px;
     color: white;
     border-radius: 5px;
     text-align: center;
-      
-      
   } */
 
 .game{
@@ -69,14 +73,15 @@ h2{
     justify-content: center;
     align-items: center;
     font-size: 24px;
-    transition: transform 0.3s, box-shadow 0.3s;
+
 
 }
-
 .cell:hover {
     transform: scale(1.05);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
+
+
 .bg{
     background-color: red;
 
@@ -90,14 +95,12 @@ h2{
 }
 
 
-.time, .counter {
-    font-size: 20px;
-    color: #252551; 
-}
 
-span {
+
+span ,.counter{
     font-weight: bold;
     color: #252551;
+    font-size: 17px;
 }
 
 
@@ -125,3 +128,13 @@ span {
     color: white;
     font-size: 15px;
   }
+
+  .button:hover {
+    padding: 2px;
+    width: 108px;
+    height: 40px;
+    border-radius: 17%;
+    background-color: #E6E6FA;
+    color: #08155c;
+    font-size: 15px;
+}
