--- a/style.css
+++ b/style.css
@@ -164,7 +164,8 @@ span ,.counter{
 }
 
 .contanier-levels li ,.contanier-main li  ,#contanier-levels-first li {
-    margin: 10px 0;          
+    margin: 10px 0; 
+    padding: 3px 10px;         
 }
 
 .contanier-levels a ,.contanier-main a ,#contanier-levels-first a{
@@ -202,4 +203,11 @@ span ,.counter{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.active{
+    background-color: #E6E6FA;
+    padding: 6px 0px;
+    border-radius: 8px;
+    width: 71px;
 }
