--- a/style.css
+++ b/style.css
@@ -116,12 +116,16 @@ h3{
 
 
 
-span ,.counter{
+span{
     font-weight: bold;
+    color: #252551;
+    font-size: 19px;
+}
+
+.Counter,.Time{
     color: #252551;
     font-size: 17px;
 }
-
 
 /* .anmation{
     transition: transform 0.6s;
